[package]
name = "system-harness"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
log = "0.4.21"
cmdstruct = { version = "2.0.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
system-harness-macros = { version = "0.1.0", path = "macros" }

[dev-dependencies]
mockall = "0.12.1"
test-log = "0.2.15"
